# document

./: CMakeLists.txt  conanfile.txt  main.cpp
benchmark/: CMakeLists.txt  benchmark.cpp  read.cpp
components/: CMakeLists.txt
components/generaty/: CMakeLists.txt  generaty.cpp  generaty.hpp
include/: allocator_intrusive_ref_counter.hpp  mr_utils.hpp
include/components/document/: allocator_intrusive_ref_counter.hpp  block_allocator.cpp  block_allocator.hpp  document.cpp  document.hpp  element_index.cpp  element_index.hpp  word_trie_node.cpp  word_trie_node.hpp
include/simdjson/: base.h  common_defs.h  error-inl.h  error.h  json_iterator.h  tape_builder.h
include/simdjson/dom/: array-inl.h  array.h  base.h  document-inl.h  document.h  element-inl.h  element.h  object-inl.h  object.h  tape_writer.h
include/simdjson/generic/: base.h
include/simdjson/internal/: jsonformatutils.h  tape_ref-inl.h  tape_ref.h  tape_type.h
src/: base.h
src/components/document/: base.hpp  document.cpp  document.hpp  json_trie_node.cpp  json_trie_node.hpp  string_splitter.cpp  string_splitter.hpp  varint.hpp  word_trie_node.hpp
src/components/document/container/: json_array.hpp  json_object.hpp
src/generic/: base.h
src/generic/stage2/: base.h  json_iterator.h  tape_builder.h  tape_writer.h
src/internal/: error_tables.cpp
test/: CMakeLists.txt  generaty.cpp  generaty.hpp  test_allocator_intrusive_ref_counter.cpp  test_document_json.cpp  test_document_t.cpp
